--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,10 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-core:1.0.1'
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1"
 
+    /* Ktor */
+    implementation("io.ktor:ktor-client-android:1.4.0")
+    implementation("io.ktor:ktor-client-serialization-jvm:1.4.0")
+
     testImplementation 'junit:junit:4.13.1'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
