--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,10 +54,12 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1"
 
     /* Ktor */
-    implementation("io.ktor:ktor-client-android:1.4.0")
-    implementation("io.ktor:ktor-client-serialization-jvm:1.4.0")
+    implementation("io.ktor:ktor-client-cio:1.4.1")
+    implementation("io.ktor:ktor-client-mock:1.4.1")
+    implementation("io.ktor:ktor-client-serialization-jvm:1.4.1")
 
     testImplementation 'junit:junit:4.13.1'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.1"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
